<resources>
    <string name="app_name">商品管理</string>
    <string name="title">商品登録</string>
    <string name="item">商品名</string>
    <string name="add_edit">10文字以内でお願いします。</string>
    <string name="price">価格</string>
    <string name="add_price">価格を入力してください。</string>
    <string name="image">画像選択</string>
    <string name="add">登録</string>
    <string name="imageview">参考画像</string>
    <string name="mainmove1">商品登録</string>
    <string name="itemList">商品欄</string>
    <string name="itemViewTitle">商品表示</string>
    <string name="api_button">更新</string>
    <string name="item_show">詳細</string>
    <string name="item_delete">削除</string>
    <string name="all_reset">リセット</string>
    <string name="camera_start">カメラで取得</string>
    <string name="icon_edit">&#xf044; 登録</string>
    <string name="icon_picture">&#xf03e; 写真選択</string>
    <string name="icon_camera">&#xf030; カメラから取得</string>
    <string name="icon_delete">&#xf1f8; 削除</string>
    <string name="icon_show">&#xf00e; 詳細</string>
    <string name="icon_update">&#xf01e; 更新</string>
    <string name="icon_reset">&#xf011; リセット</string>
    <string name="icon_list">&#xf022; 商品一覧</string>
    <string name="icon_new">&#xf067; 商品登録</string>
    <string name="icon_edit_page">&#xf044; 商品編集</string>
    <string name="shop_requeset_title">店舗問い合わせ</string>
    <string name="icon_request_check">&#xf058; 確認</string>
    <string name="icon_request_mail">&#xf0e0; メール</string>
    <string name="icon_request_back">&#xf04a; 取り消し</string>
    <string name="order_tag">&#xf07a; 店舗発注状況</string>
    <string name="wait_progress">　しばらくお待ちください。</string>
    <string name="mails">&#xf0e0;全店送信</string>
    <string name="icon_division_check">&#xf058; 発注確定</string>
    <string name="shop_info_title">店舗情報一覧</string>
    <string name="new_shop_button">&#xf055; 新規登録</string>
    <string name="add_shop_button">&#xf055;登録</string>
    <string name="add_shop_back">&#xf0a8;戻る</string>
    <string name="shop_delete">&#xf1f8;削除</string>
    <string name="shop_edit_button">&#xf01e; 編集</string>
    <string name="shop_update">&#xf01e; 編集</string>
    <string name="shop_name_header">&#xf015; 名称</string>
    <string name="shop_email_header">&#xf0e0;メールアドレス</string>
    <string name="shop_tel_header">&#xf098; 電話番号</string>
    <string name="shop_header_tag">&#xf015;店舗管理</string>

</resources>