<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ItemAdd">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="36sp"
        android:gravity="center_horizontal" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/add_name"
                android:text="@string/item"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/name_edit"
                android:hint="@string/add_edit"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/add_price"
                android:text="@string/price"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/price_edit"
                android:hint="@string/add_price"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:textSize="20sp"/>
            <ImageView
                android:id="@+id/show_image"
                android:layout_width="100dp"
                android:background="#c0c0c0"
                android:layout_height="100dp"/>
            <TextView
                android:text="@string/imageview"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                />
            <TextView
                android:text="商品説明"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/item_comment"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/bg_border_black"
                android:gravity="top"
                android:hint="説明をお書きください。"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:padding="15dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/image_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/image"/>
            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/add"/>
        </LinearLayout>



    </ScrollView>


</LinearLayout>