<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/request_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/shop_requeset_title"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="32sp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/not_request_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:textSize="18dp"
        android:text="データを表示できません。"
        android:visibility="gone"
        android:gravity="center">

    </TextView>
    <Button
        android:id="@+id/not_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="更新"
        android:visibility="gone"
        android:layout_gravity="center"/>
        />


         <LinearLayout
             android:id="@+id/request_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:textColor="#000"
                 android:layout_marginBottom="10sp"
                 android:text="商品ごとに集計するには、商品名をタップしてください。"/>


             <ListView
                 android:id="@+id/request_listView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="6"
                 android:background="#fff">


             </ListView>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">

                 <Button
                     android:id="@+id/request_up_button"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_width="0dip"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:background="@drawable/button_primary"
                     android:textColor="#fff"
                     android:text="@string/icon_update"
                     android:layout_gravity="right"/>
                 <Button
                     android:id="@+id/mail_all_button"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_width="0dip"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:background="@drawable/button_primary"
                     android:textColor="#fff"
                     android:text="@string/mails"
                     android:layout_gravity="right"/>

                 <Button
                     android:id="@+id/request_all_delete"
                     android:layout_width="0dip"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/button_delete"
                     android:text="@string/icon_reset"
                     android:textColor="#fff"
                     android:layout_gravity="right"/>

             </LinearLayout>

         </LinearLayout>


</LinearLayout>
