<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:background="#000"
        android:orientation="vertical">
        <TextView
            android:id="@+id/order_division_shop"
            android:background="#000"
            android:textColor="#fff"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="14dp"
            android:text="甲府店"
            android:textSize="18sp"
            android:layout_width="100dp"
            android:layout_height="50dp"/>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:background="#0000bb"
                    android:textColor="#fff"
                    android:text="発注数"/>
                <TextView
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:background="#0000bb"
                    android:textColor="#fff"
                    android:text="確定状況"/>
                <TextView
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:background="#0000bb"
                    android:textColor="#fff"
                    android:text="申請処理"/>
                <TextView
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:background="#0000bb"
                    android:textColor="#fff"
                    android:text="メール"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/division_price"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textColor="#ff0000"
                    android:text="200"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/division_confirm"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:text="未確定"
                    android:textSize="18sp"
                    />
                <Button
                    android:id="@+id/division_confirm_button"
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_primary"
                    android:text="@string/icon_division_check"
                    android:textColor="#fff" />
                <Button
                    android:id="@+id/division_confirm_back"
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:background="@drawable/button_delete"
                    android:text="@string/icon_request_back"
                    android:textColor="#fff" />
                <Button
                    android:id="@+id/division_confirm_mail"
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_primary"
                    android:text="@string/icon_request_mail"
                    android:textColor="#fff" />

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="20dp"
                        android:background="#0000bb"
                        android:textColor="#fff"
                        android:text="問い合わせ"/>
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="50dp"
                        android:background="@drawable/comment_border">
                        <TextView
                            android:id="@+id/price_cont"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textColor="#ff0000"
                            android:textSize="18sp" />
                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



