<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:background="@drawable/table_border"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:background="@drawable/title_area"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:text="商品名"
                    android:gravity="center_horizontal" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:background="@drawable/title_area"
                    android:textColor="#fff"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:text="注文依頼先"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/request_name_cont"
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:textColor="#0000bb"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:id="@+id/request_shop_cont"
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:textColor="#000"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/title_area"
                    android:textColor="#fff"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:layout_height="20dp"
                    android:text="発注数"/>
                <TextView
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/title_area"
                    android:textColor="#fff"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:layout_height="20dp"
                    android:text="発注日"/>
                <TextView
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/title_area"
                    android:textColor="#fff"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:layout_height="20dp"
                    android:text="発注確定"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/request_num_cont"
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="-4dp"
                    android:layout_height="30dp"
                    android:textColor="#ff0000"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/request_day_cont"
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:layout_marginTop="-4dp"
                    android:textColor="#ff0000"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/request_confirm_cont"
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="25dp"
                    android:layout_marginLeft="-5dp"
                    android:textColor="#ff0000"
                    android:layout_marginTop="-10dp"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:background="@drawable/table_border"
            >
            <Button
                android:id="@+id/reuest_send"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_primary"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/icon_request_check"/>
            <Button
                android:id="@+id/reuest_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_edit"
                android:textColor="#0000bb"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:text="@string/icon_request_back"/>
            <Button
                android:id="@+id/request_mail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#fff"
                android:background="@drawable/button_primary"
                android:text="@string/icon_request_mail"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
